--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,14 @@
 org.gradle.jvmargs=-Xmx3G
 base_version=7.2
 unstable=false
-supported_version=1.18.2 (22w06a)
-minecraft_version=22w06a
+supported_version=1.18.2 (1.18.2-pre2)
+minecraft_version=1.18.2-pre2
 forgeEnabled=false
 forge_version=39.0.5
-fabricloader_version=0.13.1
+fabricloader_version=0.13.2
 cloth_config_version=6.0.43
 modmenu_version=3.0.0
-fabric_api=0.47.1+1.18.2
-architectury_version=3.6.18
+fabric_api=0.47.6+1.18.2
+architectury_version=4.0.23
 api_exculde=
 #api_include=me.shedaniel.cloth:cloth-events,me.shedaniel.cloth:config-2,me.sargunvohra.mcmods:autoconfig1u,org.jetbrains:annotations,net.fabricmc.fabric-api:fabric
