--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -131,6 +131,7 @@ dependencies {
     modRuntime("curse.maven:elemental-craft-395158:3593428")
     modRuntime("curse.maven:datapack-anvil-432817:3569515")
     modRuntime("curse.maven:assemblylinemachines-388282:3623609")
+    modRuntime("curse.maven:mystical-agriculture-246640:3645812")
 }
 
 shadowJar {
