--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.jvmargs=-Xmx3G
 base_version=8.0
 unstable=false
-supported_version=1.18.2 (1.18.2-rc1)
+supported_version=1.18.2-rc1
 minecraft_version=1.18.2-rc1
 forgeEnabled=false
 forge_version=39.0.76
