--- a/.github/workflows/curseforge.yml
+++ b/.github/workflows/curseforge.yml
@@ -2,10 +2,6 @@ name: CF CI
 
 on:
   push:
-    paths:
-      - '**.gradle'
-      - '**.properties'
-      - '**/src/**'
     branches:
       - 3.x
       - 4.x-unstable
@@ -27,7 +23,7 @@ jobs:
         with:
           java-version: 17
       - name: Upload to CurseForge
-        run: ./gradlew build publish fabric:curseforge --stacktrace
+        run: ./gradlew build publish forge:curseforge fabric:curseforge jei-internals-workaround:curseforge --stacktrace
         env:
           danielshe_curse_api_key: ${{ secrets.CF_API_KEY }}
           BRANCH_NAME: ${{ github.ref }}
