Increase gradle memory

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -106,9 +106,10 @@ curseforge {
         apiKey = project.hasProperty('danielshe_curse_api_key') ? project.property('danielshe_curse_api_key') : System.getenv('danielshe_curse_api_key')
         project {
             id = "310111"
-            releaseType = "beta"
+            releaseType = "release"
             changelogType = "html"
             changelog = rootProject.releaseChangelog
+            addGameVersion "1.18.2"
             addGameVersion "1.18-Snapshot"
             addGameVersion "Java 17"
             addGameVersion "Fabric"
