--- a/jei-internals-workaround/build.gradle
+++ b/jei-internals-workaround/build.gradle
@@ -24,11 +24,10 @@ curseforge {
         apiKey = project.hasProperty('danielshe_curse_api_key') ? project.property('danielshe_curse_api_key') : System.getenv('danielshe_curse_api_key')
         project {
             id = "521393"
-            releaseType = "beta"
+            releaseType = "release"
             changelogType = "html"
             changelog = rootProject.releaseChangelog
-            addGameVersion "1.18"
-            addGameVersion "1.18.1"
+            addGameVersion "1.18.2"
             addGameVersion "Java 17"
             addGameVersion "Forge"
             mainArtifact(tasks.getByName("remapJar")) {
