--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -213,7 +213,7 @@ curseforge {
         apiKey = project.hasProperty('danielshe_curse_api_key') ? project.property('danielshe_curse_api_key') : System.getenv('danielshe_curse_api_key')
         project {
             id = "310111"
-            releaseType = "release"
+            releaseType = "beta"
             changelogType = "html"
             changelog = rootProject.releaseChangelog
             addGameVersion "1.18.2"
