--- a/settings.gradle
+++ b/settings.gradle
@@ -13,7 +13,7 @@ include "api"
 include "default-plugin"
 include "runtime"
 include "fabric"
-include "forge"
+//include "forge"
 
-include "jei-compatibility-layer"
-include "jei-internals-workaround"
+//include "jei-compatibility-layer"
+//include "jei-internals-workaround"
