--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,14 @@
 org.gradle.jvmargs=-Xmx6G
-base_version=8.0
+base_version=9.0
 unstable=false
-supported_version=1.18.2
-minecraft_version=1.18.2
-forgeEnabled=true
+supported_version=1.19 (22w11a)
+minecraft_version=22w11a
+forgeEnabled=false
 forge_version=40.0.1
 fabricloader_version=0.13.3
 cloth_config_version=6.2.57
 modmenu_version=3.0.0
-fabric_api=0.47.8+1.18.2
-architectury_version=4.0.27
+fabric_api=0.49.2+1.19
+architectury_version=5.1.1
 api_exculde=
 #api_include=me.shedaniel.cloth:cloth-events,me.shedaniel.cloth:config-2,me.sargunvohra.mcmods:autoconfig1u,org.jetbrains:annotations,net.fabricmc.fabric-api:fabric
