Update JEI compat for 9.7, Fix #785

--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -85,8 +85,10 @@ dependencies {
     // modRuntime("curse.maven:chiselsbits-231095:3492889")
     // modRuntime("curse.maven:jumbofurnace-390880:3120970")
     // modRuntime("curse.maven:cyclic-239286:3221427")
-    // modRuntime("curse.maven:mekanism-268560:3206392")
-    // modRuntime("curse.maven:mekanism-tools-268567:3206396")
+    modRuntime("curse.maven:mekanism-268560:3743835")
+    modRuntime("curse.maven:mekanism-tools-268567:3743838")
+    modRuntime("curse.maven:mekanism-generators-268566:3743837")
+    modRuntime("curse.maven:immersive-engineering-231951:3721708")
     // modRuntime("curse.maven:autoreglib-250363:3326041")
     // modRuntime("curse.maven:ars-nouveau-401955:3619899")
     // modRuntime("curse.maven:patchouli-306770:3594394")
