--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id("architectury-plugin") version("3.4-SNAPSHOT")
-    id("dev.architectury.loom") version("0.10.0-SNAPSHOT") apply false
+    id("dev.architectury.loom") version("0.11.0-SNAPSHOT") apply false
     id("org.cadixdev.licenser") version("0.6.1")
     id("com.matthewprenger.cursegradle") version("1.4.0")
     id("java")
@@ -76,6 +76,10 @@ allprojects {
     tasks.withType(GenerateModuleMetadata) {
         enabled = false
     }
+}
+
+["api", "default-plugin", "runtime"].forEach {
+    project(":fabric").evaluationDependsOn(":$it")
 }
 
 subprojects {
