--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -134,6 +134,10 @@ dependencies {
     modRuntime("curse.maven:mystical-agriculture-246640:3645812")
 }
 
+def modRuntime(str) {
+    dependencies.modLocalRuntime(str)
+}
+
 shadowJar {
     configurations = [project.configurations.shadowCommon]
     classifier "dev-shadow"
@@ -194,7 +198,7 @@ publishing {
                     def project = project(":" + projectName)
                     publication.artifact(project.fakeForgeJar) { classifier null }
                     def remapSourcesJarTask = project.remapSourcesJar
-                    publication.artifact(remapSourcesJarTask.output) {
+                    publication.artifact(remapSourcesJarTask) {
                         builtBy remapSourcesJarTask
                         classifier "sources"
                     }
