--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.jvmargs=-Xmx5G
 base_version=7.4
 unstable=false
-supported_version=1.18.x
+supported_version=1.18(.1)
 minecraft_version=1.18.1
 forgeEnabled=true
 forge_version=39.0.76
