--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,14 @@
 org.gradle.jvmargs=-Xmx6G
 base_version=9.0
 unstable=false
-supported_version=1.19 (22w15a)
-minecraft_version=22w15a
+supported_version=1.19 (22w16b)
+minecraft_version=22w16b
 forgeEnabled=false
 forge_version=40.0.45
-fabricloader_version=0.13.3
-cloth_config_version=6.2.57
+fabricloader_version=0.14.0
+cloth_config_version=7.0.61
 modmenu_version=3.0.0
-fabric_api=0.50.1+1.19
-architectury_version=5.1.7
+fabric_api=0.51.2+1.19
+architectury_version=5.2.8
 api_exculde=
 #api_include=me.shedaniel.cloth:cloth-events,me.shedaniel.cloth:config-2,me.sargunvohra.mcmods:autoconfig1u,org.jetbrains:annotations,net.fabricmc.fabric-api:fabric
