--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -101,8 +101,8 @@ dependencies {
     // modRuntime("curse.maven:jer-240630:3575590")
     // modRuntime("curse.maven:jep-417645:3550303")
     // modRuntime("curse.maven:simple-storage-network-268495:3594529")
-    // modRuntime("curse.maven:create-328085:3536025")
-    // modRuntime("curse.maven:flywheel-486392:3535459")
+    modRuntime("curse.maven:create-328085:3737418")
+    modRuntime("curse.maven:flywheel-486392:3737402")
     // modRuntime("curse.maven:industrial-foregoing-266515:3446262")
     // modRuntime("curse.maven:titanium-287342:3346366")
     // modRuntime("curse.maven:extended-crafting-268387:3606681")
@@ -129,11 +129,13 @@ dependencies {
     // modRuntime("curse.maven:natures-aura-306626:3587798")
     // modRuntime("curse.maven:integrated-dynamics-236307:3631804")
     // modRuntime("curse.maven:common-capabilities-247007:3614900")
-    // modRuntime("curse.maven:cyclops-core-236307:3614854")
+    modRuntime("curse.maven:evilcraft-74610:3795956")
+    modRuntime("curse.maven:cyclops-core-236307:3778682")
     // modRuntime("curse.maven:elemental-craft-395158:3593428")
     // modRuntime("curse.maven:datapack-anvil-432817:3569515")
     // modRuntime("curse.maven:assemblylinemachines-388282:3623609")
     // modRuntime("curse.maven:mystical-agriculture-246640:3645812")
+    modRuntime("curse.maven:oreberries-replanted-454062:3776180")
 }
 
 def modRuntime(str) {
