Initial Code for Condensed Entries
Very wip and kinda crap

--- a/forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -37,3 +37,4 @@ public net.minecraft.client.gui.screens.Screen tooltipStack
 public net.minecraft.client.renderer.RenderType m_173209_(Ljava/lang/String;Lcom/mojang/blaze3d/vertex/VertexFormat;Lcom/mojang/blaze3d/vertex/VertexFormat$Mode;ILnet/minecraft/client/renderer/RenderType$CompositeState;)Lnet/minecraft/client/renderer/RenderType$CompositeRenderType;
 public net.minecraft.client.renderer.RenderType$OutlineProperty
 public net.minecraft.client.renderer.RenderType$CompositeState
+public net.minecraft.core.MappedRegistry f_36461
