--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,14 @@
 org.gradle.jvmargs=-Xmx6G
 base_version=9.0
 unstable=false
-supported_version=1.19 (22w19a)
-minecraft_version=22w19a
+supported_version=1.19 (1.19-pre1)
+minecraft_version=1.19-pre1
 forgeEnabled=false
 forge_version=40.0.45
 fabricloader_version=0.14.5
-cloth_config_version=7.0.61
+cloth_config_version=7.0.65
 modmenu_version=3.0.0
-fabric_api=0.52.2+1.19
-architectury_version=5.4.11
+fabric_api=0.52.4+1.19
+architectury_version=5.4.12
 api_exculde=
 #api_include=me.shedaniel.cloth:cloth-events,me.shedaniel.cloth:config-2,me.sargunvohra.mcmods:autoconfig1u,org.jetbrains:annotations,net.fabricmc.fabric-api:fabric
