--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -224,7 +224,7 @@ curseforge {
             addGameVersion "Java 17"
             addGameVersion "Forge"
             relations {
-                requiredDependency "architectury-forge"
+                requiredDependency "architectury-api"
                 requiredDependency "cloth-config"
                 requiredDependency "roughly-enough-items-hacks"
             }
@@ -242,7 +242,7 @@ curseforge {
             addGameVersion "Java 17"
             addGameVersion "Forge"
             relations {
-                requiredDependency "architectury-forge"
+                requiredDependency "architectury-api"
                 requiredDependency "cloth-config"
             }
             mainArtifact(tasks.getByName("serverOnlyJar")) {
