--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -112,7 +112,7 @@ curseforge {
             addGameVersion "1.17"
             addGameVersion "Fabric"
             relations {
-                requiredDependency "architectury-fabric"
+                requiredDependency "architectury-api"
                 requiredDependency "cloth-config"
                 requiredDependency "fabric-api"
             }
