--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -106,11 +106,10 @@ curseforge {
         apiKey = project.hasProperty('danielshe_curse_api_key') ? project.property('danielshe_curse_api_key') : System.getenv('danielshe_curse_api_key')
         project {
             id = "310111"
-            releaseType = "release"
+            releaseType = "beta"
             changelogType = "html"
             changelog = rootProject.releaseChangelog
-            addGameVersion "1.18.2"
-            addGameVersion "1.18-Snapshot"
+            addGameVersion "1.19-Snapshot"
             addGameVersion "Java 17"
             addGameVersion "Fabric"
             relations {
