--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -129,13 +129,14 @@ dependencies {
     // modRuntime("curse.maven:natures-aura-306626:3587798")
     // modRuntime("curse.maven:integrated-dynamics-236307:3631804")
     // modRuntime("curse.maven:common-capabilities-247007:3614900")
-    modRuntime("curse.maven:evilcraft-74610:3795956")
+    // modRuntime("curse.maven:evilcraft-74610:3795956")
     modRuntime("curse.maven:cyclops-core-236307:3778682")
     // modRuntime("curse.maven:elemental-craft-395158:3593428")
     // modRuntime("curse.maven:datapack-anvil-432817:3569515")
     // modRuntime("curse.maven:assemblylinemachines-388282:3623609")
     // modRuntime("curse.maven:mystical-agriculture-246640:3645812")
     modRuntime("curse.maven:oreberries-replanted-454062:3776180")
+    modRuntime("curse.maven:farmers-delight-398521:3784851")
 }
 
 def modRuntime(str) {
