--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -130,7 +130,7 @@ dependencies {
     // modRuntime("curse.maven:integrated-dynamics-236307:3631804")
     // modRuntime("curse.maven:common-capabilities-247007:3614900")
     // modRuntime("curse.maven:evilcraft-74610:3795956")
-    modRuntime("curse.maven:cyclops-core-236307:3778682")
+    // modRuntime("curse.maven:cyclops-core-236307:3778682")
     // modRuntime("curse.maven:elemental-craft-395158:3593428")
     // modRuntime("curse.maven:datapack-anvil-432817:3569515")
     // modRuntime("curse.maven:assemblylinemachines-388282:3623609")
