--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -96,8 +96,8 @@ dependencies {
     // modRuntime("curse.maven:geckolib-388172:3627502")
     // modRuntime("curse.maven:refined-storage-243076:3623324")
     // modRuntime("appeng:appliedenergistics2:10.0.1")
-    // modRuntime("curse.maven:tcon-74072:3273213")
-    // modRuntime("curse.maven:mantle-74924:3634761")
+    modRuntime("curse.maven:tcon-74072:3784732")
+    modRuntime("curse.maven:mantle-74924:3784500")
     // modRuntime("curse.maven:jer-240630:3575590")
     // modRuntime("curse.maven:jep-417645:3550303")
     // modRuntime("curse.maven:simple-storage-network-268495:3594529")
