Fix favoriting items in the pinned recipe and add error rendering

--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -113,9 +113,9 @@ dependencies {
     // modRuntime("curse.maven:token-enchanter-444421:3449483")
     // modRuntime("curse.maven:silent-lib-242998:3400030")
     // modRuntime("curse.maven:resourceful-bees-384508:3485315")
-    // modRuntime("curse.maven:thermal-expansion-69163:3404884")
-    // modRuntime("curse.maven:thermal-foundation-222880:3412300")
-    // modRuntime("curse.maven:cofh-core-69162:3407019")
+    modRuntime("curse.maven:thermal-expansion-69163:3803489")
+    modRuntime("curse.maven:thermal-foundation-222880:3803495")
+    modRuntime("curse.maven:cofh-core-69162:3803484")
     // modRuntime("curse.maven:advanced-peripherals-431725:3525665")
     // modRuntime("curse.maven:cc-tweaked-282001:3434680")
     // modRuntime("curse.maven:ender-storage-245174:3361748")
