--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -85,10 +85,10 @@ dependencies {
     // modRuntime("curse.maven:chiselsbits-231095:3492889")
     // modRuntime("curse.maven:jumbofurnace-390880:3120970")
     // modRuntime("curse.maven:cyclic-239286:3221427")
-    modRuntime("curse.maven:mekanism-268560:3743835")
-    modRuntime("curse.maven:mekanism-tools-268567:3743838")
-    modRuntime("curse.maven:mekanism-generators-268566:3743837")
-    modRuntime("curse.maven:immersive-engineering-231951:3721708")
+    // modRuntime("curse.maven:mekanism-268560:3743835")
+    // modRuntime("curse.maven:mekanism-tools-268567:3743838")
+    // modRuntime("curse.maven:mekanism-generators-268566:3743837")
+    // modRuntime("curse.maven:immersive-engineering-231951:3721708")
     // modRuntime("curse.maven:autoreglib-250363:3326041")
     // modRuntime("curse.maven:ars-nouveau-401955:3619899")
     // modRuntime("curse.maven:patchouli-306770:3594394")
@@ -96,13 +96,13 @@ dependencies {
     // modRuntime("curse.maven:geckolib-388172:3627502")
     // modRuntime("curse.maven:refined-storage-243076:3623324")
     // modRuntime("appeng:appliedenergistics2:10.0.1")
-    modRuntime("curse.maven:tcon-74072:3784732")
-    modRuntime("curse.maven:mantle-74924:3784500")
+    // modRuntime("curse.maven:tcon-74072:3784732")
+    // modRuntime("curse.maven:mantle-74924:3784500")
     // modRuntime("curse.maven:jer-240630:3575590")
     // modRuntime("curse.maven:jep-417645:3550303")
     // modRuntime("curse.maven:simple-storage-network-268495:3594529")
-    modRuntime("curse.maven:create-328085:3737418")
-    modRuntime("curse.maven:flywheel-486392:3737402")
+    // modRuntime("curse.maven:create-328085:3737418")
+    // modRuntime("curse.maven:flywheel-486392:3737402")
     // modRuntime("curse.maven:industrial-foregoing-266515:3446262")
     // modRuntime("curse.maven:titanium-287342:3346366")
     // modRuntime("curse.maven:extended-crafting-268387:3606681")
@@ -113,9 +113,9 @@ dependencies {
     // modRuntime("curse.maven:token-enchanter-444421:3449483")
     // modRuntime("curse.maven:silent-lib-242998:3400030")
     // modRuntime("curse.maven:resourceful-bees-384508:3485315")
-    modRuntime("curse.maven:thermal-expansion-69163:3803489")
-    modRuntime("curse.maven:thermal-foundation-222880:3803495")
-    modRuntime("curse.maven:cofh-core-69162:3803484")
+    // modRuntime("curse.maven:thermal-expansion-69163:3803489")
+    // modRuntime("curse.maven:thermal-foundation-222880:3803495")
+    // modRuntime("curse.maven:cofh-core-69162:3803484")
     // modRuntime("curse.maven:advanced-peripherals-431725:3525665")
     // modRuntime("curse.maven:cc-tweaked-282001:3434680")
     // modRuntime("curse.maven:ender-storage-245174:3361748")
@@ -135,8 +135,8 @@ dependencies {
     // modRuntime("curse.maven:datapack-anvil-432817:3569515")
     // modRuntime("curse.maven:assemblylinemachines-388282:3623609")
     // modRuntime("curse.maven:mystical-agriculture-246640:3645812")
-    modRuntime("curse.maven:oreberries-replanted-454062:3776180")
-    modRuntime("curse.maven:farmers-delight-398521:3784851")
+    // modRuntime("curse.maven:oreberries-replanted-454062:3776180")
+    // modRuntime("curse.maven:farmers-delight-398521:3784851")
 }
 
 def modRuntime(str) {
