--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,14 @@
 org.gradle.jvmargs=-Xmx6G
 base_version=9.0
 unstable=false
-supported_version=1.19 (1.19-pre1)
-minecraft_version=1.19-pre1
-forgeEnabled=false
-forge_version=40.1.20
-fabricloader_version=0.14.5
-cloth_config_version=7.0.65
-modmenu_version=3.0.0
-fabric_api=0.52.4+1.19
-architectury_version=5.4.12
+supported_version=1.19
+minecraft_version=1.19
+forgeEnabled=true
+forge_version=41.0.1
+fabricloader_version=0.14.6
+cloth_config_version=7.0.69
+modmenu_version=4.0.0
+fabric_api=0.55.2+1.19
+architectury_version=5.5.16
 api_exculde=
 #api_include=me.shedaniel.cloth:cloth-events,me.shedaniel.cloth:config-2,me.sargunvohra.mcmods:autoconfig1u,org.jetbrains:annotations,net.fabricmc.fabric-api:fabric
