Add accepted stacks to the tooltip

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -106,10 +106,11 @@ curseforge {
         apiKey = project.hasProperty('danielshe_curse_api_key') ? project.property('danielshe_curse_api_key') : System.getenv('danielshe_curse_api_key')
         project {
             id = "310111"
-            releaseType = "beta"
+            releaseType = "release"
             changelogType = "html"
             changelog = rootProject.releaseChangelog
-            addGameVersion "1.19-Snapshot"
+            addGameVersion "1.19"
+            addGameVersion "Java 17"
             addGameVersion "Java 17"
             addGameVersion "Fabric"
             relations {
