--- a/jei-internals-workaround/build.gradle
+++ b/jei-internals-workaround/build.gradle
@@ -19,25 +19,31 @@ processResources {
     inputs.property "version", project.version
 }
 
-curseforge {
-    if (project.hasProperty('danielshe_curse_api_key') || System.getenv('danielshe_curse_api_key') != null) {
-        apiKey = project.hasProperty('danielshe_curse_api_key') ? project.property('danielshe_curse_api_key') : System.getenv('danielshe_curse_api_key')
-        project {
-            id = "521393"
-            releaseType = "release"
-            changelogType = "html"
-            changelog = rootProject.releaseChangelog
-            addGameVersion "1.19"
-            addGameVersion "Java 17"
-            addGameVersion "Forge"
-            mainArtifact(tasks.getByName("remapJar")) {
-                displayName = "[Forge $project.supported_version] v$project.version"
+unifiedPublishing {
+    project {
+        displayName = "[Forge $rootProject.supported_version] v$project.version"
+        releaseType = "release"
+        gameVersions = ["1.19"]
+        gameLoaders = ["forge"]
+        changelog = rootProject.releaseChangelog
+
+        mainPublication remapJar
+
+        if (project.hasProperty("danielshe_curse_api_key") || System.getenv("danielshe_curse_api_key") != null) {
+            curseforge {
+                token = project.hasProperty("danielshe_curse_api_key") ? project.property("danielshe_curse_api_key") : System.getenv("danielshe_curse_api_key")
+                id = "521393"
+                gameVersions.addAll "Java 17"
             }
         }
-    }
-    options {
-        forgeGradleIntegration = false
-        javaVersionAutoDetect = false
+
+        if (project.hasProperty("modrinth_key") || System.getenv("modrinth_key") != null) {
+            modrinth {
+                token = project.hasProperty("modrinth_key") ? project.property("modrinth_key") : System.getenv("modrinth_key")
+                id = "1PfY6b5p"
+                version = "$project.version+$project.name"
+            }
+        }
     }
 }
 
