--- a/.github/workflows/curseforge.yml
+++ b/.github/workflows/curseforge.yml
@@ -23,8 +23,9 @@ jobs:
         with:
           java-version: 17
       - name: Upload Mod
-        run: ./gradlew build publish forge:modPublish fabric:modPublish jei-internals-workaround:modPublish --stacktrace
+        run: ./gradlew build publish forge:publishUnified fabric:publishUnified jei-internals-workaround:publishUnified --stacktrace
         env:
           danielshe_curse_api_key: ${{ secrets.CF_API_KEY }}
+          modrinth_key: ${{ secrets.MODRINTH_KEY }}
           BRANCH_NAME: ${{ github.ref }}
           MAVEN_PASS: ${{ secrets.MAVEN_PASS }}
