--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -59,6 +59,7 @@ loom {
     forge {
         localMods {
             jeiInternalsWorkaround {
+                add(project(":jei-compatibility-layer").sourceSets.main)
                 add(project(":jei-internals-workaround").sourceSets.main)
             }
         }
@@ -74,8 +75,6 @@ dependencies {
     modApi("me.shedaniel.cloth:cloth-config-forge:${cloth_config_version}")
     modApi("dev.architectury:architectury-forge:${architectury_version}")
 
-    common(project(path: ":jei-compatibility-layer", configuration: "namedElements")) { transitive false }
-    shadowCommon(project(path: ":jei-compatibility-layer", configuration: "namedElements")) { transitive false }
     runtimeClasspath(project(path: ":jei-internals-workaround", configuration: "namedElements")) { transitive false }
 
     depProjects.forEach {
