Add REIPluginLoader and resolve dists properly

--- a/jei-compatibility-layer/build.gradle
+++ b/jei-compatibility-layer/build.gradle
@@ -9,6 +9,7 @@ dependencies {
     modCompileOnly("dev.architectury:architectury-forge:${architectury_version}")
     compileOnly(project(path: ":api")) { transitive false }
     compileOnly(project(path: ":default-plugin")) { transitive false }
+    compileOnly(project(path: ":forge")) { transitive false }
     compileOnly('com.google.code.findbugs:jsr305:3.0.2')
     compileClasspath(annotationProcessor("org.projectlombok:lombok:1.18.22"))
 }
